# Aetherea

./: Cargo.toml  LICENSE-COMMERCIAL  README.md
src/: app.rs  app.slint  main.rs  mainwindow.slint  splashscreen.slint
ui/: app.slint
ui/docks/: menubar.slint
ui/windows/: mainwindow.slint
