[package]
name = "aetherea"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.21.0"
eframe = "0.31.0"
egui = "0.31.0"
rdev = "0.5.3"
serde_yaml = "0.9.34"
wgpu = "24.0.1"
winit = { version = "0.29", features = ["rwh_05"] }

[package.metadata.bundle]
name = "Aetherea"
version = "0.1.0"
icon = "path/to/your/icon.png"  # Optional, just a PNG icon
